# mpdf

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  create_demo.py  mpdf-create.py  mpdf-spec.md  mpdf-validate.py  pyproject.toml  register-mpdf.reg
.github/workflows/: ci.yml
docs/: index.html
docs/editor/: index.html
examples/: academic-paper.mpdf  generate_examples.py  minimal.mpdf  tutorial.mpdf
setup/: install-linux.sh  install-macos.sh  install-windows.bat
src/mpdf/: __init__.py  cli.py  stylesheet.py
