[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mpdf"
version = "1.0.0"
description = "MPDF — Media PDF: Open document format with animated GIF support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Ruslan Adilgereev"}]
keywords = ["mpdf", "pdf", "gif", "document", "format"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup",
]

[project.urls]
Homepage = "https://github.com/ruslanadilgereev/mpdf"
Specification = "https://github.com/ruslanadilgereev/mpdf/blob/main/mpdf-spec.md"

[project.scripts]
mpdf = "mpdf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
